<resources>
    <string name="app_name">Heal-O-Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact Number</string>
    <string name="about_me">About Me</string>
    <string name="description">Describe Your Mental Situation</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="allow_call_from_others">Allow Call From Others</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="post_description">Post Description</string>
    <string name="post">Post</string>
    <string name="post_image">Post Image</string>
    <string name="post_message">Post Message</string>
    <string name="post_by">Post By</string>
    <string name="_00_likes">00 Likes</string>
    <string name="send">send</string>
    <string name="you">you</string>
    <string name="other">other</string>
    <string name="enter_message">Enter Message</string>
    <string name="sex">sex</string>
    <string name="about">About</string>
    <string name="contact">contact</string>
    <string name="call">Call</string>
    <string name="message">message</string>
    <string name="name">name</string>
    <string name="vatsal_kesarwani">Vatsal Kesarwani</string>
    <string name="plazzy99">plazzy99</string>
    <string name="android_developer_java_competitive_programmer_loves_to_talk_on_tech">Mentor @HakinCodes\'20 | Android Developer | Programmer | Android Developer at @DSC-JSS-NOIDA</string>
    <string name="follow_me">Contact Me</string>
    <string name="linkedin">linkedin</string>
    <string name="github">github</string>
    <string name="twitter">twitter</string>
    <string name="profile_cover">profile cover</string>
    <string name="personal_info">Personal Info</string>
    <string name="edit_you_profile">Edit Your Profile</string>
    <string name="how_do_you_feel">How do you feel</string>
    <string name="mental_state">Mental State</string>
    <string name="namaste">Namaste 🙏</string>
    <string name="welcomeTxt">\"Joy shared is doubled, Sorrow shared is halved.\"\n\nHeal-O-Chat is a Social Media Application for people who have been feeling less motivated in life or are losing hope. This platform allows users to chat with people and share their thoughts and feelings with each other and thereby let go of stress, anxiety and depression that they\'ve been feeling for long.</string>
    <string name="WelcomeMotivationalTxt">So don\'t feel low anymore and hit the button to get started</string>
    <string name="report_post">Report Post</string>
    <string name="block_user">Block User</string>
    <string name="blocked_user">Blocked User</string>
    <string name="block">Block</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="unblock">Unblock</string>
    <string name="send_mssg_button">send mssg button</string>
    <string name="xx_xx_am">xx:xx am</string>
    <string name="image">Image</string>
    <string name="view_profile">View Profile</string>
    <string name="deactivate_profile">Deactivate Profile</string>
    <string name="posts">Posts</string>
    <string name="add_some_friends_to_your_chat_list_from_the_cure_profiles">Add Some Friends to your chat list from the cure profiles</string>
    <string name="no_user_blocked_from_your_side">No User Blocked From Your Side</string>
    <string name="your_activity">Your Activity</string>
    <string name="post_later">Post Later?</string>
    <string name="info_post_later">The post will remain private, until you change visibilty of the post.</string>
</resources>