<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/block"
        android:title="@string/block"
        app:showAsAction="never"
        android:visible="true"
        />
    <item
        android:id="@+id/clear_chat"
        android:title="@string/clear_chat"
        app:showAsAction="never"
        android:visible="true"
        />

    <item
        android:id="@+id/call"
        android:title="@string/call"
        android:icon="@drawable/ic_call"
        app:showAsAction="always"
        android:visible="true"
        />

    <item
        android:id="@+id/attach"
        android:title="@string/image"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always"
        android:visible="true"
        />

</menu>