<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/post_image" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/_00_likes"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"/>

    <TextView
        android:id="@+id/postBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/postMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="27"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/post_message"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</LinearLayout>