<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Editprofile"
    android:background="#EEFFFC">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_dp_edit"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_dp_edit">

            <EditText
                android:id="@+id/fullname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:hint="@string/full_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:weightSum="2">

                <EditText
                    android:id="@+id/age_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:hint="@string/age" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/sex_edit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <EditText
                android:id="@+id/contact_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:inputType="phone"
                android:maxLength="10"
                android:singleLine="true"
                android:hint="@string/contact_number" />

            <EditText
                android:id="@+id/about_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:maxLines="10"
                android:inputType="textMultiLine"
                android:hint="@string/about_me" />

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:maxLines="10"
                android:inputType="textMultiLine"
                android:hint="@string/description" />

            <Button
                android:id="@+id/save"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save_changes"
                android:background="@drawable/button"
                android:textColor="@android:color/white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>