<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddPost">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:contentDescription="@string/post_image" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_add_circle_outline"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/post_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="10dp"
        android:inputType="textMultiLine"
        android:layout_marginEnd="2dp"
        android:maxHeight="212dp"
        android:maxLength="200"
        android:hint="@string/post_description"
        android:layout_toStartOf="@+id/card" />

    <Button
        android:id="@+id/post"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="60dp"
        android:text="@string/post"
        android:background="@drawable/button"
        android:textColor="@android:color/white"/>


</RelativeLayout>